Quorum3/Library/Tests/TemplatingGenerated/Pass/TwoTypeObjObjNumObjRetBoolean.quorum
class Main
    action Main
        Yoda<Boolean, Boolean, Number> yoda
        Number y = yoda:useForce(true, true)
        output "passed"
     end
end
