Quorum3/Library/Tests/TemplatingGenerated/Fail/TwoTypePriPriNumObjRetBooleanFail.quorum
class Main
    action Main
        Yoda<Boolean, Boolean, Number> yoda
        boolean y = yoda(true, true, true)
     end
end
